--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = baae714
-	trimbase = 
+	trim = typekits/rtt_control_msgs
+	base = b15a20b
+	trimbase = baae714
 	parent = upstream
 	previous = b07102f
