--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0d8a92a
-	trimbase = 
+	trim = typekits/rtt_controller_manager_msgs
+	base = f260923
+	trimbase = 0d8a92a
 	parent = upstream
 	previous = b07102f
