--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d2cc738
+	base = 4331a00
 	trimbase = 
 	parent = debian/kinetic/rtt_control_msgs
-	previous = 
+	previous = d2cc738
