--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f260923
+	base = d218bcc
 	trimbase = 
 	parent = release/kinetic/rtt_controller_manager_msgs
-	previous = 
+	previous = f260923
