--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8fdb9df
+	base = 8254518
 	trimbase = 
 	parent = debian/kinetic/rtt_controller_manager_msgs
-	previous = 
+	previous = 8fdb9df
