--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 99f9ddd
+	base = 2d826a0
 	trimbase = 
 	parent = debian/kinetic/rtt_control_msgs
-	previous = 
+	previous = 99f9ddd
