--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 66f537f
+	base = 5bfae3d
 	trimbase = 
 	parent = debian/kinetic/rtt_controller_manager_msgs
-	previous = 
+	previous = 66f537f
