--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b15a20b
+	base = 4401d00
 	trimbase = 
 	parent = release/kinetic/rtt_control_msgs
-	previous = 
+	previous = b15a20b
