--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 276b09b
+	base = b50b7dd
 	trimbase = 
 	parent = rpm/kinetic/rtt_control_msgs
-	previous = 
+	previous = 276b09b
