--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 86cc2b5
+	base = d577df1
 	trimbase = 
 	parent = rpm/kinetic/rtt_controller_manager_msgs
-	previous = 
+	previous = 86cc2b5
