--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_control_msgs
-	base = 5f2d70e
-	trimbase = 
+	base = 18d5e14
+	trimbase = 5f2d70e
 	parent = upstream
 	previous = b07102f
