--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_control_msgs
 	base = b15a20b
-	trimbase = baae714
+	trimbase = 
 	parent = upstream
 	previous = b07102f
