--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = typekits/rtt_controller_manager_msgs
-	base = 256eed8
-	trimbase = 
+	base = 0eadf4b
+	trimbase = 256eed8
 	parent = upstream
 	previous = b07102f
