--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 18d5e14
+	base = 5706202
 	trimbase = 
 	parent = release/kinetic/rtt_control_msgs
-	previous = 
+	previous = 18d5e14
