--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f404bfe
+	base = ad1bae3
 	trimbase = 
 	parent = arch/kinetic/rtt_control_msgs
-	previous = 
+	previous = f404bfe
