--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0eadf4b
+	base = 14f0d30
 	trimbase = 
 	parent = release/kinetic/rtt_controller_manager_msgs
-	previous = 
+	previous = 0eadf4b
