--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 735e6ff
+	base = 80ba1e5
 	trimbase = 
 	parent = arch/kinetic/rtt_controller_manager_msgs
-	previous = 
+	previous = 735e6ff
